--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>React Swiggy</title>
+      <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-      <div id="root"></div>
-      <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-      <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+      <div id="root">
+            <h2>Hello React</h2>
+      </div>
+      <script type="module" src="./src/App.js"></script>
 </body>
 </html>
